# Master_CHPS_Projet_TOP

./: .clangd  .gitignore  CMakeLists.txt  README.md  default.nix  rapport.typ
benchmarks/: CMakeLists.txt  benchmark_cache_blocking.cpp  benchmark_layout_all.cpp  benchmark_layout_minus_outliers.cpp  cache_blocking.cpp  gpu_implem.cpp  layout_all.cpp  layout_minus_outliers.cpp
culkan/: culkan.h
profilings/: CMakeLists.txt  final_results_cache_blocking.cpp  final_results_first.cpp  final_results_layout.cpp  worst_layout.cpp
scripts/: blocks_strong_scaling.py  layouts_strong_scaling.py
src/: matrix_product.hpp  operation.comp
tests/: CMakeLists.txt  check_gpu_implem.cpp  check_same_results.cpp
